# src/server.ts
@@ -3,18 +3,23 @@ import "dotenv/config";
 import express, { Application, Request, Response } from "express";
 
 import { swaggerSpec, swaggerUi } from "./config/swagger";
+import { authMiddleware } from "./middlewares/auth.middleware";
 import { errorHandlerMiddleware } from "./middlewares/error-handler.middleware";
+import { authRouter } from "./routes/auth.routes";
 import { catalogoComidaRouter } from "./routes/catalogo-comida.routes";
 import { catalogoPeliculaRouter } from "./routes/catalogo-pelicula.routes";
 import { citaRouter } from "./routes/cita.routes";
+import { userRouter } from "./routes/user.routes";
 
 const app: Application = express();
 const PORT = Number(process.env.PORT) || 3000;
 
 app.use(express.json());
-app.use("/api/citas", citaRouter);
-app.use("/api/peliculas", catalogoPeliculaRouter);
-app.use("/api/comidas", catalogoComidaRouter);
+app.use("/api/auth", authRouter);
+app.use("/api/users", authMiddleware, userRouter);
+app.use("/api/citas", authMiddleware, citaRouter);
+app.use("/api/peliculas", authMiddleware, catalogoPeliculaRouter);
+app.use("/api/comidas", authMiddleware, catalogoComidaRouter);
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerSpec));
 
 app.get("/health", (_req: Request, res: Response) => {
