# swagger/comidas.yaml
@@ -9,6 +9,8 @@ paths:
     get:
       tags:
         - Comidas
+      security:
+        - bearerAuth: []
       summary: Listar comidas del catalogo
       responses:
         '200':
@@ -22,6 +24,8 @@ paths:
     post:
       tags:
         - Comidas
+      security:
+        - bearerAuth: []
       summary: Crear comida en catalogo
       requestBody:
         required: true
@@ -51,6 +55,8 @@ paths:
     get:
       tags:
         - Comidas
+      security:
+        - bearerAuth: []
       summary: Obtener comida por id
       parameters:
         - in: path
@@ -70,6 +76,8 @@ paths:
     put:
       tags:
         - Comidas
+      security:
+        - bearerAuth: []
       summary: Actualizar comida del catalogo
       parameters:
         - in: path
@@ -93,6 +101,8 @@ paths:
     delete:
       tags:
         - Comidas
+      security:
+        - bearerAuth: []
       summary: Eliminar comida del catalogo
       parameters:
         - in: path
